added login with token (full)

--- a/src/Presentation/ProniaOnion.API/appsettings.json
+++ b/src/Presentation/ProniaOnion.API/appsettings.json
@@ -8,5 +8,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt": {
+    "Issuer": "https://localhost:7190/",
+    "Auidience": "https://localhost:7190/",
+    "SecurityKey": "96433513-6a8c-428d-9aa6-bb16324ad396"
+  },
+
   "AllowedHosts": "*"
 }
